--- a/adonisgram/resources/views/welcome.edge
+++ b/adonisgram/resources/views/welcome.edge
@@ -88,7 +88,7 @@
     <div>
       <h1 class="title"> It Works! </h1>
       <p class="subtitle">
-        Congratulations, you have just created your first AdonisJS app.
+        Congratulations, you have just created your first AdonisJS 5 app.
       </p>
 
       <ul>
