--- a/adonisgram/resources/views/layouts/default.edge
+++ b/adonisgram/resources/views/layouts/default.edge
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Adonisgram</title>
 </head>
 <body>
-    <div>
+    <div class="antialiased bg-gray-100 h-screen p-4 relative">
         @!section('content')
     </div>
 </body>
