--- a/adonisgram/resources/views/auth/signin.edge
+++ b/adonisgram/resources/views/auth/signin.edge
@@ -1,23 +1,31 @@
 @layout('layouts/default')
 
 @section('content')
-  <div>
-    <h1>Sign In</h1>
-    <p>{{ flashMessages.get('success') || '' }}</p>
+  @if(flashMessages.get('success'))
+    <div class=" bg-green-500 text-white text-sm py-2 px-2 rounded absolute top-4 right-4">{{ flashMessages.get('success') || '' }}</div>
+  @endif
+  <div class="max-w-xs mx-auto text-gray-800 bg-white rounded p-8 border border-gray-300">
+    <h1 style="font-family: 'Pacifico'" class="text-4xl h-14 text-center">adonisgram</h1>
+    <h2 class="text-center font-bold text-gray-500">Log in to see and share photos and videos with your friends.</h2>
     <form action="{{route('signin_user')}}" method="POST">
       {{ csrfField() }}
       <div>
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" value="{{ flashMessages.get('email') || '' }}">
-        <p>{{ flashMessages.get('errors.email') || '' }}</p>
+        <input class="border w-full h-5 px-2 py-4 mt-2 rounded focus:outline-none hover: outline-none focus:ring-1 focus:ring-gray-300 placeholder-gray-800 text-sm" type="email" name="email" id="email" value="{{ flashMessages.get('email') || '' }}" placeholder="Email">
+        <p class="text-xs text-red-600">{{ flashMessages.get('errors.email') || '' }}</p>
       </div>
       <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-        <p>{{ flashMessages.get('errors.password') || '' }}</p>
+        <input class="border w-full h-5 px-2 py-4 mt-2 rounded focus:outline-none hover: outline-none focus:ring-1 focus:ring-gray-300 placeholder-gray-800 text-sm" type="password" name="password" id="password" placeholder="Password">
+        <p class="text-xs text-red-600">{{ flashMessages.get('errors.password') || '' }}</p>
       </div>
-        <button type="submit">Sign in</button>
+      <div>
+        <button class="bg-blue-300 w-full text-white py-1 mt-2 rounded" type="submit">Log in</button>
+      </div>
+      <div>
+        <a href="#" class="text-sm text-center block text-gray-500 mt-4">Forgot password?</a>
       </div>
     </form>
+  </div>
+  <div class="max-w-xs text-center mt-2 mx-auto text-sm text-gray-800 bg-white rounded p-8 border border-gray-300">
+    Don't have an account? <a class="text-blue-400 font-bold" href="{{route('show_signup_form')}}">Sign up</a>
   </div>
 @endsection
